syntax = "proto3";

message SPStoredCredential {
    string username = 1;
    bytes data = 2;
}

message SPPassword {
    string id = 1;
    string password = 2;
    bytes padding = 3;
}

message FacebookAccessToken {
    string fb_uid = 1;
    string access_token = 2;
}

message SPOneTimeToken {
    string token = 1;
}

message SPParentChildCredential {
    string child_id = 1;
    SPStoredCredential parent_stored = 2;
}

message AppleSignInCredential {
    string auth_code = 1;
    string redirect_uri = 2;
    string bundle_id = 3;
}
